--- a/src/components/Addressbook.module.css
+++ b/src/components/Addressbook.module.css
@@ -16,7 +16,7 @@
 
 .addressbookentry:hover {
   background-color: #000;
-  color: #c3921f;
+  color: #18bd18;
   cursor: pointer;
   border: solid 1px grey;
   padding: 8px;
