--- a/src/components/Common.module.css
+++ b/src/components/Common.module.css
@@ -27,7 +27,7 @@
 }
 
 .highlight {
-  color: #c3921f;
+  color: #18bd18;
 }
 
 .xlarge {
@@ -79,8 +79,8 @@
 }
 
 .primarybutton {
-  background-color: #c3921f;
-  color: #000;
+  background-color: #18bd18;
+  color: #c3c3c3;
   text-align: center;
   font-weight: bold;
   font-size: 14px;
@@ -89,16 +89,16 @@
   padding-left: 16px;
   padding-right: 16px;
   border-radius: 4px;
-  border-color: #c3921f;
+  border-color: #18bd18;
   margin-left: 8px;
   margin-right: 8px;
 }
 
 .primarybutton:disabled,
 .primarybutton[disabled] {
-  border: 1px solid #999;
-  background-color: #ccc;
-  color: #666;
+  border: 1px solid rgba(90, 140, 90, 1);
+  background-color: rgba(90, 140, 90, 1);
+  color: #c3c3c3;
 }
 
 .primarybutton:hover {
