--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,14 @@
 @import "~typeface-roboto/index.css";
 
 html {
-  overflow: hidden;
+  overflow: hidden; 
 }
 
 body {
   position: relative;
-  color: white;
+  color: #c3c3c3;
   height: 100vh;
-  background-color: #212124;
+  background-color: #011401;
   font-family: Roboto, Arial, Helvetica, Helvetica Neue, serif;
 }
 
@@ -36,7 +36,7 @@ h2 {
   font-size: 2.25rem;
   font-weight: bold;
   letter-spacing: -0.025em;
-  color: #fff;
+  color: #c3c3c3;
 }
 
 p {
@@ -79,8 +79,8 @@ input[disabled] {
 }
 
 .react-tabs__tab--selected {
-  background: #c3921f;
-  color: black;
+  background: #011401;
+  color: #c3c3c3;
   border-radius: 5px 5px 0 0;
 }
 
