--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -4,3 +4,10 @@
   margin-left: 16px;
   margin-right: 16px;
 }
+
+.containermargin {
+  margin: 16px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
