--- a/src/components/common/Common.module.css
+++ b/src/components/common/Common.module.css
@@ -81,11 +81,11 @@
 }
 
 .primarybutton {
-  background-color: #18bd18;
-  color: #c3c3c3;
+  background-color: #18bd18; 
+  color: #fff;
   text-align: center;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 16px;
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 16px;
@@ -98,13 +98,18 @@
 
 .primarybutton:disabled,
 .primarybutton[disabled] {
-  border: 1px solid rgba(90, 140, 90, 1);
+  border: 1px solid #18bd18;
   background-color: rgba(90, 140, 90, 1);
   color: #c3c3c3;
 }
 
 .primarybutton:hover {
   cursor: pointer;
+}
+
+.marginnegativetitle {
+  margin-top: -20px;
+  margin-bottom: -20px;
 }
 
 .padtopsmall {
@@ -185,6 +190,7 @@
   position: absolute;
   padding: 16px;
   min-width: 700px;
+  border: #18bd18 4px solid;
 }
 
 .modalOverlay {
