--- a/src/components/common/Common.module.css
+++ b/src/components/common/Common.module.css
@@ -16,7 +16,13 @@
 }
 
 .verticalflex {
+  display: flex;
   flex-direction: column;
+}
+
+.horizontalflex {
+  display: flex;
+  flex-direction: row;
 }
 
 .flex {
@@ -78,6 +84,15 @@
 
 .breakword {
   word-break: break-all;
+}
+
+.verticalbuttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  gap: 20px;
 }
 
 .primarybutton {
