--- a/src/components/send/Send.module.css
+++ b/src/components/send/Send.module.css
@@ -48,3 +48,20 @@
   margin-left: 5px;
   margin-right: 5px;
 }
+
+.containermarginleft {
+  display: flex;
+  flex-direction: column;
+  margin: 16px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.horizontalcontainer {
+  display: flex;
+  flex-direction: column;
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-top: 16px; 
+}
