--- a/src/components/common/Common.module.css
+++ b/src/components/common/Common.module.css
@@ -189,6 +189,19 @@
   color: white;
 }
 
+.inputboxmemo {
+  width: calc(100% - 16px);
+  font-family: Roboto, Arial, Helvetica, Helvetica Neue, serif;
+  min-height: 38px;
+  max-height: 300px;
+  padding-left: 8px;
+  padding-right: 8px;
+  font-size: 16px;
+  border: none;
+  background-color: #000;
+  color: white;
+}
+
 .buttoncontainer {
   text-align: center;
   padding-top: 24px;
